--- a/opera.html
+++ b/opera.html
@@ -5,39 +5,40 @@
         <body>
             <h1>Reece Kramer Productions LTD</h1>
             <h3>The Gondoliers </h2>
-            <h6>RECITATIVE AND DUET—CASILDA AND LUIZ.  O rapture, when alone together
+            <h6>RECITATIVE AND DUET—CASILDA AND LUIZ.</h6> 
+            <p> O rapture, when alone together
                 Two loving hearts and those that bear them
            May join in temporary tether,
-                Though Fate apart should rudely tear them.
+                Though Fate apart should rudely tear them.</p>
 
- CAS.      Necessity, Invention's mother,
+ <h6>CAS.</h6>      <p>Necessity, Invention's mother,
                 Compelled me to a course of feigning—
            But, left alone with one another,
-                I will atone for my disdaining!
+                I will atone for my disdaining!</p>
 
-                                AIR
+                                <h6>AIR</h6>
 
- CAS.                     Ah, well-beloved,
+ <h6>CAS.</h6>                    <p> Ah, well-beloved,
                           Mine angry frown
                           Is but a gown
                           That serves to dress
-                          My gentleness!
+                          My gentleness!</p>
 
- LUIZ.                    Ah, well-beloved,
+ <h6>LUIZ.</h6>                  <p> Ah, well-beloved,
                           Thy cold disdain,
                           It gives no pain—
                           'Tis mercy, played
-                          In masquerade!
+                          In masquerade!</p>
 
- BOTH.                    Ah, well-beloved, etc.
+ <h6>BOTH.</h6>                    <p>Ah, well-beloved, etc.</p>
 
-      CAS.  O Luiz, Luiz—what have you said?  What have I done?
- What have I allowed you to do?
-      LUIZ.  Nothing, I trust, that you will ever have reason to
- repent.  (Offering to embrace her.)
-      CAS. (withdrawing from him).  Nay, Luiz, it may not be.  I
- have embraced you for the last time.
-      LUIZ (amazed).  Casilda!</h6>
+      <h6>CAS.</h6>  <p>O Luiz, Luiz—what have you said?  What have I done?
+ What have I allowed you to do?</p>
+      <h6>LUIZ.</h6>  <p>Nothing, I trust, that you will ever have reason to
+ repent.</p>  <p>(Offering to embrace her.)</p>
+      <h6>CAS.</h6> <p>(withdrawing from him).</p>  <p>Nay, Luiz, it may not be.  I
+ have embraced you for the last time.</p>
+      <h6>LUIZ</h6> <p>(amazed).</p>  <p>Casilda!</p>
         </body>
     </head>
 </html>
