--- a/opera.html
+++ b/opera.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+     <link rel="stylesheet" href="gs.css">
+    </head>
         <title>KramerAs4</title>
         <body>
             <h1>Reece Kramer Productions LTD</h1>
@@ -11,34 +13,34 @@
            May join in temporary tether,
                 Though Fate apart should rudely tear them.</p>
 
- <h6>CAS.</h6>      <p>Necessity, Invention's mother,
+ <h6 id="name" class="cas">CAS.</h6>      <p class="song">Necessity, Invention's mother,
                 Compelled me to a course of feigning—
            But, left alone with one another,
                 I will atone for my disdaining!</p>
 
                                 <h6>AIR</h6>
 
- <h6>CAS.</h6>                    <p> Ah, well-beloved,
+ <h6 id="name" class="cas">CAS.</h6>                    <p id="song" class="cas"> Ah, well-beloved,
                           Mine angry frown
                           Is but a gown
                           That serves to dress
                           My gentleness!</p>
 
- <h6>LUIZ.</h6>                  <p> Ah, well-beloved,
+ <h6 id="name" class="luiz">LUIZ.</h6>                  <p id="song" class="luiz"> Ah, well-beloved,
                           Thy cold disdain,
                           It gives no pain—
                           'Tis mercy, played
                           In masquerade!</p>
 
- <h6>BOTH.</h6>                    <p>Ah, well-beloved, etc.</p>
+ <h6 id="name" class="both">BOTH.</h6>                    <p id="song" class="both">Ah, well-beloved, etc.</p>
 
-      <h6>CAS.</h6>  <p>O Luiz, Luiz—what have you said?  What have I done?
+      <h6 id="name" class="cas">CAS.</h6>  <p id="speech" class="cas">O Luiz, Luiz—what have you said?  What have I done?
  What have I allowed you to do?</p>
-      <h6>LUIZ.</h6>  <p>Nothing, I trust, that you will ever have reason to
- repent.</p>  <p>(Offering to embrace her.)</p>
-      <h6>CAS.</h6> <p>(withdrawing from him).</p>  <p>Nay, Luiz, it may not be.  I
+      <h6 id="name" class="luiz">LUIZ.</h6>  <p id="speech" class="luiz">Nothing, I trust, that you will ever have reason to
+ repent.</p>  <p id="direction" class="luiz">(Offering to embrace her.)</p>
+      <h6 id="name" class="cas">CAS.</h6> <p id="direction" class="cas">(withdrawing from him).</p>  <p id="speech" class="cas">Nay, Luiz, it may not be.  I
  have embraced you for the last time.</p>
-      <h6>LUIZ</h6> <p>(amazed).</p>  <p>Casilda!</p>
+      <h6 id="name" class="luiz">LUIZ</h6> <p id="direction" class="luiz">(amazed).</p>  <p id="speech" class="luiz">Casilda!</p>
         </body>
-    </head>
+    
 </html>
