--- a/opera.html
+++ b/opera.html
@@ -13,7 +13,7 @@
            May join in temporary tether,
                 Though Fate apart should rudely tear them.</p>
 
- <h6 id="name" class="cas">CAS.</h6>      <p class="song">Necessity, Invention's mother,
+ <h6 id="name" class="cas">CAS.</h6>      <p id="song" class="cas">Necessity, Invention's mother,
                 Compelled me to a course of feigning—
            But, left alone with one another,
                 I will atone for my disdaining!</p>
@@ -43,4 +43,22 @@
       <h6 id="name" class="luiz">LUIZ</h6> <p id="direction" class="luiz">(amazed).</p>  <p id="speech" class="luiz">Casilda!</p>
         </body>
     
+        <table class="table">
+          <tr>
+          <th> Chracter </th>
+          <th> Singer </th>
+          <th> Offer</th>
+          </tr>
+          <tr>
+          <td> Cas </td>
+          <td> Freddy Mercury </td>
+          <td> $10000</td>
+          </tr>
+          <tr>
+          <td> Luiz </td>
+          <td> David Bowie </td>
+          <td> $10000 </td>
+          </tr>
+          </table>
+          <a href="opera2.html">Second Page</a>
 </html>
